--- a/styles/main.css
+++ b/styles/main.css
@@ -8,3 +8,16 @@ h1 {
     text-align: center;
     font-size: 3.5em; /* 40px/16=2.5em */
 }
+
+.usernameField {
+    text-align: center;
+    padding-top: 5%;
+}
+
+p.usernameField {
+    font-size: 2em;
+}
+
+input.usernameField {
+    padding: 20px 20px;
+}
