Add background, create image and font files

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,23 +1,33 @@
+@font-face {
+    font-family: 'Egyptian Nights';
+    src: url('../Fonts/Egyptian_Nights.ttf');
+}
+
 body {
-    background-image : url("../hypnotize.png");
+    background-image : url("../Images/book-botanical-cactus.jpg");
+    background-size: cover;
 }
 
 h1 {
-    font-family: 'Permanent Marker', cursive;
+    font-family: 'Sue Ellen Francisco', cursive;
+    font-weight: lighter;
     margin: auto;
     text-align: center;
-    font-size: 3.5em;
+    font-size:6em;
+    color: #686055;
+    padding-top: 15px;
 }
 
 .usernameField {
     text-align: center;
-    padding-top: 5%;
+    padding-top: 50px;
 }
 
 p{
     font-size: 2em;
     font-family: 'Comfortaa', cursive;
     text-align: center;
+    color: #686055
 }
 
 input.usernameField {
@@ -33,4 +43,5 @@ a{
     align-content: center;
     font-size: 1.5em;
     font-family: 'Comfortaa', cursive;
+    color: #686055
 }
