--- a/styles/main.css
+++ b/styles/main.css
@@ -4,18 +4,25 @@
 }
 
 body {
-    background-image : url("../Images/book-botanical-cactus.jpg");
+    background-image : url("../Images/lechatnoir.jpg");
     background-size: cover;
 }
 
 h1 {
-    font-family: 'Sue Ellen Francisco', cursive;
+    font-family: 'IBM Plex Serif', serif;
     font-weight: lighter;
     margin: auto;
     text-align: center;
-    font-size:6em;
-    color: #686055;
+    font-size:5em;
     padding-top: 15px;
+}
+
+h2 {
+    font-family: 'IBM Plex Serif', serif;
+    font-weight: lighter;
+    margin: auto;
+    text-align: center;
+    font-size:2em;
 }
 
 .usernameField {
@@ -25,23 +32,40 @@ h1 {
 
 p{
     font-size: 2em;
-    font-family: 'Comfortaa', cursive;
+    font-family: 'IBM Plex Serif', serif;
     text-align: center;
-    color: #686055
 }
 
 input.usernameField {
     padding: 20px 20px;
-    font-family: 'Comfortaa';
+    font-family: 'IBM Plex Serif', serif;
 }
 
 .welcome{
     display : block;
 }
 
-a{
-    align-content: center;
-    font-size: 1.5em;
-    font-family: 'Comfortaa', cursive;
-    color: #686055
+
+
+.messageSpace {
+    display: inline-block;
+    width: 320px;
+    padding: 10px;
+    border: 1px solid red;
+    margin: 0;
+    background:rgba(255,255,255, 0.6);
+}
+
+.activeUsers {
+    display: inline-block;
+    width: 320px;
+    padding: 10px;
+    border: 1px solid red;
+    margin: 0;
+    background:rgba(255,255,255, 0.6);
+    float: right;
+}
+
+hr {
+    color: red;
 }
