--- a/styles/main.css
+++ b/styles/main.css
@@ -6,6 +6,7 @@
 body {
     background-image : url("../Images/lechatnoir.jpg");
     background-size: cover;
+    background-color: rgba(255,255,255, 0.2);
 }
 
 h1 {
@@ -22,7 +23,7 @@ h2 {
     font-weight: lighter;
     margin: auto;
     text-align: center;
-    font-size:2em;
+    font-size:1.5em;
 }
 
 .usernameField {
@@ -49,18 +50,16 @@ input.usernameField {
 
 .messageSpace {
     display: inline-block;
-    width: 320px;
+    width: 60%;
     padding: 10px;
-    border: 1px solid red;
     margin: 0;
     background:rgba(255,255,255, 0.6);
 }
 
 .activeUsers {
     display: inline-block;
-    width: 320px;
+    width: 30%;
     padding: 10px;
-    border: 1px solid red;
     margin: 0;
     background:rgba(255,255,255, 0.6);
     float: right;
