--- a/styles/main.css
+++ b/styles/main.css
@@ -60,6 +60,10 @@ input.usernameField {
     background:rgba(255,255,255, 0.6);
 }
 
+p.messageSpace{
+    text-align: justify;
+}
+
 .activeUsers {
     display: inline-block;
     width: 30%;
